tests/renderer/snapshots/tests__renderer__graphical__with_label_severity_note.snap
---
source: tests/renderer/graphical.rs
expression: render(message)
---
× error: mismatched types
   ╭─[src/test.lm:2:5]
 1 │ let a = 1;
 2 │ let b = 2;
   │     ^^^^^ labelled message
 3 │ let c = a + b;
   ╰──
